Revert "Added/fixed license and changed minimum stability"
This reverts commit 4c8f2f0e3e8a9c6c6bc9d83c695235b05bcf9ad6.

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
   "description": "PHP5 library for SOAP.",
   "keywords": ["SOAP", "nuSOAP", "asistenteweb"],
   "homepage": "https://github.com/AsistenteWeb/nuSOAP",
-  "license": "LGPL-2.1",
-  "minimum-stability" : "stable",
+  "license": "GNU",
   "authors": [
     {
       "name": "Asistente Web",
